      direct access to inventories is discouraged. (Robert Collins)
 
    * New method ``next_with_ghosts`` on the Graph breadth-first-search objects
      which will split out ghosts and present parents into two separate sets,
      useful for code which needs to be aware of ghosts (e.g. fetching data
      cares about ghosts during revision selection). (Robert Collins)
 
    * Record a timestamp against each mutter to the trace file, relative to the
      first import of bzrlib.  (Andrew Bennetts)
     
    * ``Repository.get_data_stream`` is now deprecated in favour of
      ``Repository.get_data_stream_for_search`` which allows less network
      traffic when requesting data streams over a smart server. (Robert Collins)

    * ``RemoteBzrDir._get_tree_branch`` no longer triggers ``_ensure_real``,
      removing one round trip on many network operations. (Robert Collins)

    * RemoteTransport's ``recommended_page_size`` method now returns 64k, like
      SFTPTransport and HttpTransportBase.  (Andrew Bennetts)

    * Repository formats have a new supported-feature attribute
      ``supports_external_lookups`` used to indicate repositories which support
      falling back to other repositories when they have partial data.
      (Robert Collins)

    * Repository has a new method ``has_revisions`` which signals the presence
      of many revisions by returning a set of the revisions listed which are
      present. This can be done by index queries without reading data for parent
      revision names etc. (Robert Collins)


bzr 1.1 2008-01-15
------------------

(no changes from 1.1rc1)

bzr 1.1rc1 2008-01-05
---------------------

  CHANGES:
   
   * Dotted revision numbers have been revised. Instead of growing longer with
     nested branches the branch number just increases. (eg instead of 1.1.1.1.1
     we now report 1.2.1.) This helps scale long lived branches which have many
     feature branches merged between them. (John Arbash Meinel)
