@@ -44,6 +44,42 @@ class SmartServerRequestOpenBzrDir(SmartServerRequest):
 
 class SmartServerRequestFindRepository(SmartServerRequest):
 
+    def _boolean_to_yes_no(self, a_boolean):
+        if a_boolean:
+            return 'yes'
+        else:
+            return 'no'
+
+    def _find(self, path):
+        """try to find a repository from path upwards
+        
+        This operates precisely like 'bzrdir.find_repository'.
+        
+        :return: (relpath, rich_root, tree_ref, external_lookup) flags. All are
+            strings, relpath is a / prefixed path, and the other three are
+            either 'yes' or 'no'.
+        :raises errors.NoRepositoryPresent: When there is no repository
+            present.
+        """
+        bzrdir = BzrDir.open_from_transport(self._backing_transport.clone(path))
+        repository = bzrdir.find_repository()
+        # the relpath of the bzrdir in the found repository gives us the 
+        # path segments to pop-out.
+        relpath = repository.bzrdir.root_transport.relpath(bzrdir.root_transport.base)
+        if len(relpath):
+            segments = ['..'] * len(relpath.split('/'))
+        else:
+            segments = []
+        rich_root = self._boolean_to_yes_no(repository.supports_rich_root())
+        tree_ref = self._boolean_to_yes_no(
+            repository._format.supports_tree_reference)
+        external_lookup = self._boolean_to_yes_no(
+            repository._format.supports_external_lookups)
+        return '/'.join(segments), rich_root, tree_ref, external_lookup
+
+
+class SmartServerRequestFindRepositoryV1(SmartServerRequestFindRepository):
+
     def do(self, path):
         """try to find a repository from path upwards
         
@@ -52,27 +88,39 @@ class SmartServerRequestFindRepository(SmartServerRequest):
         If a bzrdir is not present, an exception is propogated
         rather than 'no branch' because these are different conditions.
 
+        This is the initial version of this method introduced with the smart
+        server. Modern clients will try the V2 method that adds support for the
+        supports_external_lookups attribute.
+
         :return: norepository or ok, relpath.
         """
-        bzrdir = BzrDir.open_from_transport(self._backing_transport.clone(path))
         try:
-            repository = bzrdir.find_repository()
-            # the relpath of the bzrdir in the found repository gives us the 
-            # path segments to pop-out.
-            relpath = repository.bzrdir.root_transport.relpath(bzrdir.root_transport.base)
-            if len(relpath):
-                segments = ['..'] * len(relpath.split('/'))
-            else:
-                segments = []
-            if repository.supports_rich_root():
-                rich_root = 'yes'
-            else:
-                rich_root = 'no'
-            if repository._format.supports_tree_reference:
-                tree_ref = 'yes'
-            else:
-                tree_ref = 'no'
-            return SuccessfulSmartServerResponse(('ok', '/'.join(segments), rich_root, tree_ref))
+            path, rich_root, tree_ref, external_lookup = self._find(path)
+            return SuccessfulSmartServerResponse(('ok', path, rich_root, tree_ref))
+        except errors.NoRepositoryPresent:
+            return FailedSmartServerResponse(('norepository', ))
+
+
+class SmartServerRequestFindRepositoryV2(SmartServerRequestFindRepository):
+
+    def do(self, path):
+        """try to find a repository from path upwards
+        
+        This operates precisely like 'bzrdir.find_repository'.
+        
+        If a bzrdir is not present, an exception is propogated
+        rather than 'no branch' because these are different conditions.
+
+        This is the second edition of this method introduced in bzr 1.2, which
+        returns information about the supports_external_lookups format
+        attribute too.
+
+        :return: norepository or ok, relpath.
+        """
+        try:
+            path, rich_root, tree_ref, external_lookup = self._find(path)
+            return SuccessfulSmartServerResponse(
+                ('ok', path, rich_root, tree_ref, external_lookup))
         except errors.NoRepositoryPresent:
             return FailedSmartServerResponse(('norepository', ))
 
